compiler/tests/fixtures/invalid/semantics/assignment_local_outside_loop.viv
// Invalid: local variable assignment outside loop

action bad-local:
    roles:
        @actor:
            as: initiator
    effects:
        _@temp = 5
